--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   convert: 3.0.2
   flutter:
     sdk: flutter
-
+  universal_platform: ^0.1.3
   window_size:
       git:
         url: https://github.com/google/flutter-desktop-embedding.git
