--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
   universal_platform: ^0.1.3
+  flutter_secure_storage: ^6.0.0
+  flutter_dotenv: ^5.0.2
   window_size:
       git:
         url: https://github.com/google/flutter-desktop-embedding.git
@@ -72,6 +74,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
+    - .env
     - assets/open-book.png
     - assets/Zenesus.png
     - assets/Zenesus-logos_black.png
