--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   universal_platform: ^0.1.3
   flutter_secure_storage: ^6.0.0
+  url_launcher: ^6.1.5
   flutter_dotenv: ^5.0.2
   window_size:
       git:
