--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   convert: 3.0.2
   flutter:
     sdk: flutter
-  universal_platform: ^0.1.3
+  universal_platform: ^1.0.0-nullsafety
   flutter_secure_storage: ^6.0.0
   url_launcher: ^6.1.5
   flutter_dotenv: ^5.0.2
