--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   http: ^0.13.4
+  vibration: ^1.7.5
   convert: 3.0.2
   flutter:
     sdk: flutter
