--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.zenesus">
-   <application
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <application
         android:label="zenesus"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
