--- a/lib/icons/config.json
+++ b/lib/icons/config.json
@@ -17,6 +17,12 @@
       "css": "binoculars",
       "code": 61925,
       "src": "fontawesome"
+    },
+    {
+      "uid": "64abb7c56aefca89046bb69f7251d2e2",
+      "css": "calendar",
+      "code": 59392,
+      "src": "elusive"
     }
   ]
 }
