--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  firebase_core: ^2.1.1
+  cloud_firestore: ^4.0.3
+  googleapis: ^9.2.0
+  googleapis_auth: ^1.3.1
   confetti: ^0.7.0
-  http: ^0.13.4
+  http: ^0.13.2
   intl: ^0.17.0
   convert: ^3.0.2
   flutter:
@@ -47,6 +51,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   syncfusion_flutter_calendar: ^20.2.49
+
 
 dev_dependencies:
   flutter_test:
